// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ThreeIdHandler applies anchor record correctly 1`] = `
Object {
  "anchorProof": Object {
    "blockNumber": 123456,
  },
  "anchorStatus": 3,
  "content": Object {
    "other": "data",
    "publicKeys": Object {
      "test": "0xabc",
    },
  },
  "doctype": "tile",
  "log": Array [
    Object {
      "codec": "dag-pb",
      "hash": Uint8Array [
        18,
        32,
        222,
        189,
        122,
        219,
        60,
        229,
        101,
        68,
        210,
        42,
        111,
        107,
        147,
        57,
        111,
        105,
        128,
        168,
        6,
        124,
        44,
        193,
        52,
        240,
        247,
        128,
        27,
        99,
        49,
        9,
        43,
        149,
      ],
      "version": 1,
    },
    Object {
      "codec": "dag-pb",
      "hash": Uint8Array [
        18,
        32,
        222,
        189,
        122,
        219,
        60,
        229,
        101,
        68,
        210,
        42,
        111,
        107,
        147,
        57,
        115,
        137,
        128,
        168,
        6,
        124,
        44,
        193,
        52,
        240,
        247,
        128,
        27,
        99,
        49,
        9,
        43,
        149,
      ],
      "version": 1,
    },
    Object {
      "codec": "dag-pb",
      "hash": Uint8Array [
        18,
        32,
        222,
        189,
        122,
        219,
        60,
        229,
        101,
        68,
        210,
        42,
        111,
        107,
        147,
        57,
        119,
        169,
        128,
        168,
        6,
        124,
        44,
        193,
        52,
        240,
        247,
        128,
        27,
        99,
        49,
        9,
        43,
        149,
      ],
      "version": 1,
    },
  ],
  "metadata": Object {
    "owners": Array [
      "did:key:zQ3shwsCgFanBax6UiaLu1oGvM7vhuqoW88VBUiUTCeHbTeTV",
    ],
    "tags": Array [
      "3id",
    ],
  },
  "next": Object {},
  "signature": 2,
}
`;

exports[`ThreeIdHandler applies genesis record correctly 1`] = `
Object {
  "anchorStatus": 0,
  "content": Object {
    "publicKeys": Object {
      "test": "0xabc",
    },
  },
  "doctype": "tile",
  "log": Array [
    Object {
      "codec": "dag-pb",
      "hash": Uint8Array [
        18,
        32,
        222,
        189,
        122,
        219,
        60,
        229,
        101,
        68,
        210,
        42,
        111,
        107,
        147,
        57,
        111,
        105,
        128,
        168,
        6,
        124,
        44,
        193,
        52,
        240,
        247,
        128,
        27,
        99,
        49,
        9,
        43,
        149,
      ],
      "version": 1,
    },
  ],
  "metadata": Object {
    "owners": Array [
      "did:key:zQ3shwsCgFanBax6UiaLu1oGvM7vhuqoW88VBUiUTCeHbTeTV",
    ],
    "tags": Array [
      "3id",
    ],
  },
  "next": Object {
    "content": null,
  },
  "signature": 2,
}
`;

exports[`ThreeIdHandler applies signed record correctly 1`] = `
Object {
  "anchorStatus": 0,
  "content": Object {
    "other": "data",
    "publicKeys": Object {
      "test": "0xabc",
    },
  },
  "doctype": "tile",
  "log": Array [
    Object {
      "codec": "dag-pb",
      "hash": Uint8Array [
        18,
        32,
        222,
        189,
        122,
        219,
        60,
        229,
        101,
        68,
        210,
        42,
        111,
        107,
        147,
        57,
        111,
        105,
        128,
        168,
        6,
        124,
        44,
        193,
        52,
        240,
        247,
        128,
        27,
        99,
        49,
        9,
        43,
        149,
      ],
      "version": 1,
    },
    Object {
      "codec": "dag-pb",
      "hash": Uint8Array [
        18,
        32,
        222,
        189,
        122,
        219,
        60,
        229,
        101,
        68,
        210,
        42,
        111,
        107,
        147,
        57,
        115,
        137,
        128,
        168,
        6,
        124,
        44,
        193,
        52,
        240,
        247,
        128,
        27,
        99,
        49,
        9,
        43,
        149,
      ],
      "version": 1,
    },
  ],
  "metadata": Object {
    "owners": Array [
      "did:key:zQ3shwsCgFanBax6UiaLu1oGvM7vhuqoW88VBUiUTCeHbTeTV",
    ],
    "tags": Array [
      "3id",
    ],
  },
  "next": Object {
    "content": Object {
      "other": "data",
      "publicKeys": Object {
        "test": "0xabc",
      },
    },
  },
  "signature": 2,
}
`;
